# sleek-engine

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO.md
src/app/: Core.cpp  Core.h  Engine.cpp  Engine.h  PostProcessing.cpp
src/app/metaball/: Metaball.h
src/app/sample/: MetaballSample.cpp  Sample.h  SkinningSample.cpp
src/app/skinning/: Engine.cpp  Engine.h  KeyFrame.cpp  KeyFrame.h  Skinning.cpp  Skinning.h
src/examples/gui-test/: main.cpp
src/examples/metaball/: Core.cpp  Core.h  PostProcessing.cpp  main.cpp
src/examples/metaball/metaball/: Metaball.cpp  MetaballTables.h
src/examples/metaball/sample/: MetaballSample.cpp  MetaballSample.h  Sample.cpp  Sample.h
src/examples/particle-simulation/: const.h  main.cpp  particle.h  simulation.cpp  simulation.h
src/examples/plateformer/: main.cpp
src/examples/plateformer/nodes/: Ammo.h  Object.cpp  Ship.cpp  Ship.h
src/examples/plateformer/state/: SpaceShooterState.h
src/examples/skinning/: Core.cpp  Core.h  PostProcessing.h  main.cpp
src/examples/skinning/sample/: Sample.cpp  Sample.h  SkinningSample.cpp  SkinningSample.h
src/examples/skinning/skinning/: DualQuaternion.cpp  DualQuaternion.h  LinearBlend.cpp  LinearBlend.h  Skinning.h
src/examples/space-shooter/: Core.cpp  Core.h  Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  PostProcessing.cpp  PostProcessing.h  Ship.cpp  SpaceShooter.cpp  SpaceShooter.h  SpaceShooterManager.cpp  SpaceShooterManager.h  SpaceShooterState.cpp  SpaceShooterState.h  main.cpp
src/examples/space-shooter/nodes/: Ammo.cpp  Ammo.h  Object.cpp  Object.h  Ship.cpp  Ship.h
src/examples/space-shooter/state/: Game.cpp  Game.h  SpaceShooterState.cpp  SpaceShooterState.h
src/plugin/video/: audio.cpp  audio.h  video.cpp  video.h
src/plugin/video/theora/: TheoraDataSource.cpp  TheoraDataSource.h  TheoraException.h  TheoraExport.h  TheoraUtil.cpp  TheoraVideoClip.cpp  TheoraVideoFrame.h  TheoraVideoManager.cpp
src/sleek/: compile.h  define.h  reference.cpp  reference.h  start.h
src/sleek/device/: device.cpp  device.h  device_stub.h  event.cpp  event.h  icone.h  keyboard.cpp  keyboard.h  keycode.h  splash.cpp  splash.h
src/sleek/device/common/: glfw3.cpp  glfw3.h  sdl.cpp  sdl.h  sdl2.cpp  sdl2.h  win.cpp  win.h  x11.cpp  x11.h  xf86.cpp  xf86.h
src/sleek/device/console/: spdlog.h
src/sleek/device/tool/: cpuid.cpp  cpuid.h  os.cpp  os.h
src/sleek/driver/: context.cpp  context.h  driver.cpp  driver.h  fbo.cpp  fbo.h  geometry.cpp  geometry.h  identifier.h  material.h  mesh.cpp  mesh.h  rtype.h  shader.cpp  shader.h  texture.cpp  texture.h  texture3d.cpp  texture3d.h  texture_array.cpp  texture_array.h
src/sleek/driver/ogl3/: ogl3.h  ogl3_context.cpp  ogl3_context.h  ogl3_driver.cpp  ogl3_driver.h  ogl3_fbo.cpp  ogl3_fbo.h  ogl3_shader.cpp  ogl3_shader.h  ogl3_texture.cpp  ogl3_texture.h  ogl3_texture_3d.cpp  ogl3_texture_3d.h  ogl3_texture_array.cpp  ogl3_texture_array.h  ogl3_texture_fbo.cpp  ogl3_texture_fbo.h  ogl3_vao.cpp  ogl3_vao.h
src/sleek/gui/: button.cpp  button.h  checkbox.cpp  colorpicker.cpp  colorpicker.h  cursor.cpp  cursor.h  font-ttf.cpp  font-ttf.h  font.cpp  font.h  frame.cpp  frame.h  interface.cpp  interface.h  picture.cpp  picture.h  progressbar.cpp  scrollbar.cpp  scrollbar.h  statictext.cpp  statictext.h  theme.cpp  theme.h  type.h  window.cpp  window.h
src/sleek/gui/element/: button.cpp  button.h  checkbox.cpp  checkbox.h  colorpicker.cpp  colorpicker.h  frame.cpp  frame.h  picture.cpp  picture.h  progressbar.cpp  progressbar.h  scrollbar.cpp  scrollbar.h  statictext.cpp  statictext.h  window.cpp  window.h
src/sleek/gui/font/: font-ttf.cpp  font-ttf.h  font.cpp  font.h
src/sleek/io/: archive.h  directory.h  filereader.h  filesystem.cpp  filesystem.h  filewriter.h
src/sleek/io/mem/: filereader.h  filesystem.cpp  filesystem.h  filewriter.h
src/sleek/io/std/: directory.cpp  directory.h  filereader.cpp  filereader.h  filesystem.cpp  filesystem.h  filewriter.h
src/sleek/io/zip/: directory.h  filereader.h  filesystem.cpp  filesystem.h
src/sleek/loader/: loader.cpp  loader.h  ressource.h  ressource_loader.h
src/sleek/loader/mesh/: mesh_3ds.cpp  mesh_3ds.h  mesh_obj.cpp  mesh_obj.h  mesh_txt.cpp  mesh_txt.h
src/sleek/loader/texture/: color_converter.cpp  color_converter.h  decompres_dxt.cpp  decompres_dxt.h  texture_blp.cpp  texture_blp.h  texture_bmp.cpp  texture_bmp.h  texture_jpg.cpp  texture_jpg.h  texture_pcx.cpp  texture_pcx.h  texture_pgm.cpp  texture_pgm.h  texture_png.cpp  texture_png.h  texture_tga.cpp  texture_tga.h  texture_tiff.cpp  texture_tiff.h
src/sleek/math/: aabbox.h  edgemap.h  fps_counter.h  function.h  index.h  kdtree.cpp  kdtree.h  math.h  pixel.h  spline.cpp  spline.h  timer.cpp  timer.h  vertex.h
src/sleek/node/: node.cpp  node.h  scene.cpp  scene.h
src/sleek/node/billboard/: billboard.cpp  billboard.h  sprite.cpp  sprite.h
src/sleek/node/camera/: camera.cpp  camera.h  fps.cpp  fps.h  frustum.cpp  frustum.h  trackball.cpp  trackball.h
src/sleek/node/real/: grid.cpp  grid.h  natif.cpp  natif.h  octree.cpp  octree.h
